--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.Documentos-mysql-connector-j-9.5.0=../../mysql-connector-j-9.5.0
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.Documentos-mysql-connector-j-9.5.0}
+    ${file.reference.Documentos-mysql-connector-j-9.5.0}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
